[package]
name = "ggv"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dirs = "5"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[profile.release]
opt-level = "z"   # optimize for size
strip = true      # strip symbols from binary
panic = "abort"   # smaller panic handling
